<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sistema">

    <TextView
        android:id="@+id/tvPrincipal"
        android:layout_width="266dp"
        android:layout_height="108dp"
        android:layout_marginTop="8dp"
        android:text="@string/tela_principal"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/myBolinha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/myMontagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/btnMontagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/myBolinha"
        app:layout_constraintTop_toBottomOf="@+id/tvPrincipal" />

    <Button
        android:id="@+id/myBolinha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/myMontagen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/myEstoque"
        app:layout_constraintTop_toBottomOf="@+id/tvPrincipal" />

    <Button
        android:id="@+id/myEstoque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/btnEstoque"
        app:layout_constraintEnd_toStartOf="@+id/myBolinha"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrincipal" />

    <ImageView
        android:id="@+id/imgEstoque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/processo_de_controle_E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgBolinhas"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myEstoque"
        app:layout_constraintVertical_bias="0.006"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/imgBolinhas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/processo_de_contagen_B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgMontagen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgEstoque"
        app:layout_constraintTop_toBottomOf="@+id/myBolinha"
        app:layout_constraintVertical_bias="0.006"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/imgMontagen"
        android:layout_width="79dp"
        android:layout_height="89dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/processo_de_montagen_M"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgBolinhas"
        app:layout_constraintTop_toBottomOf="@+id/myMontagen"
        app:layout_constraintVertical_bias="0.006"
        app:srcCompat="@drawable/montagem_dois_amores3" />

</android.support.constraint.ConstraintLayout>